fix: ajustar el tamaño de fuente en el diseño para mejorar la legibilidad

--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@
   }
 
   html {
-    font-size: 120%;
+    font-size: 100%;
   }
 
   body {
